@@ -1,155 +1,198 @@
 package ru.practicum.shareit.item.service;
 
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import ru.practicum.shareit.booking.Booking;
 import ru.practicum.shareit.booking.BookingStatus;
-import ru.practicum.shareit.booking.dao.BookingRepositoryJpa;
+import ru.practicum.shareit.booking.storage.BookingRepository;
 import ru.practicum.shareit.exception.NotFoundException;
 import ru.practicum.shareit.exception.ValidationException;
-import ru.practicum.shareit.item.Item;
 import ru.practicum.shareit.item.Comment;
-import ru.practicum.shareit.item.dao.CommentRepositoryJpa;
-import ru.practicum.shareit.item.dao.ItemRepositoryJpa;
+import ru.practicum.shareit.item.Item;
 import ru.practicum.shareit.item.dto.CommentDto;
 import ru.practicum.shareit.item.dto.ItemDto;
-import ru.practicum.shareit.item.mapper.CommentMapper;
-import ru.practicum.shareit.item.mapper.ItemMapper;
+import ru.practicum.shareit.item.storage.CommentRepository;
+import ru.practicum.shareit.item.storage.ItemRepository;
 import ru.practicum.shareit.user.User;
-import ru.practicum.shareit.user.dao.UserRepositoryJpa;
+import ru.practicum.shareit.user.storage.UserRepository;
 
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
+@Transactional(readOnly = true)
 @RequiredArgsConstructor
 public class ItemServiceImpl implements ItemService {
 
-    private final ItemRepositoryJpa itemRepository;
-    private final UserRepositoryJpa userRepository;
-    private final BookingRepositoryJpa bookingRepository;
-    private final CommentRepositoryJpa commentRepository;
+    private final ItemRepository itemRepository;
+    private final UserRepository userRepository;
+    private final BookingRepository bookingRepository;
+    private final CommentRepository commentRepository;
 
     @Override
-    public ItemDto create(ItemDto itemDto, Long ownerId) {
-        User owner = validateUser(ownerId);
-        Item item = ItemMapper.toItem(itemDto, owner);
-        Item saved = itemRepository.save(item);
-        return ItemMapper.toItemDto(saved);
+    @Transactional
+    public ItemDto create(ItemDto itemDto, Long userId) {
+        User owner = userRepository.findById(userId)
+                .orElseThrow(() -> new NotFoundException("User not found"));
+
+        Item item = Item.builder()
+                .name(itemDto.getName())
+                .description(itemDto.getDescription())
+                .available(itemDto.getAvailable())
+                .owner(owner)
+                .requestId(itemDto.getRequestId())
+                .build();
+
+        Item savedItem = itemRepository.save(item);
+        return toItemDto(savedItem);
     }
 
     @Override
-    public ItemDto update(ItemDto itemDto, Long ownerId, Long itemId) {
-        User owner = validateUser(ownerId);
-        Item existing = validateItem(itemId);
+    @Transactional
+    public ItemDto update(ItemDto itemDto, Long itemId, Long userId) {
+        Item item = itemRepository.findById(itemId)
+                .orElseThrow(() -> new NotFoundException("Item not found"));
 
-        if (!existing.getOwner().getId().equals(owner.getId())) {
+        if (!item.getOwner().getId().equals(userId)) {
             throw new NotFoundException("Only owner can update item");
         }
 
         if (itemDto.getName() != null) {
-            existing.setName(itemDto.getName());
+            item.setName(itemDto.getName());
         }
         if (itemDto.getDescription() != null) {
-            existing.setDescription(itemDto.getDescription());
+            item.setDescription(itemDto.getDescription());
         }
         if (itemDto.getAvailable() != null) {
-            existing.setAvailable(itemDto.getAvailable());
+            item.setAvailable(itemDto.getAvailable());
         }
 
-        Item saved = itemRepository.save(existing);
-        return ItemMapper.toItemDto(saved);
+        Item updatedItem = itemRepository.save(item);
+        return toItemDto(updatedItem);
     }
 
     @Override
     public ItemDto getById(Long itemId, Long userId) {
-        validateUser(userId);
-        Item item = validateItem(itemId);
+        Item item = itemRepository.findById(itemId)
+                .orElseThrow(() -> new NotFoundException("Item not found"));
 
-        LocalDateTime now = LocalDateTime.now();
+        ItemDto itemDto = toItemDto(item);
 
-        Booking lastBooking = bookingRepository
-                .findFirstByItem_IdAndEndBeforeOrderByEndDesc(itemId, now)
-                .orElse(null);
+        if (item.getOwner().getId().equals(userId)) {
+            addBookingInfo(itemDto);
+        }
 
-        Booking nextBooking = bookingRepository
-                .findFirstByItem_IdAndStartAfterOrderByStartAsc(itemId, now)
-                .orElse(null);
-
-        List<CommentDto> comments = commentRepository.findAllByItemId(itemId).stream()
-                .map(CommentMapper::mapToCommentDto)
-                .collect(Collectors.toList());
-
-        return ItemMapper.toItemDtoWithBookings(item, lastBooking, nextBooking, comments);
+        itemDto.setComments(getCommentsByItemId(itemId));
+        return itemDto;
     }
 
     @Override
-    public List<ItemDto> getByOwner(Long ownerId) {
-        User owner = validateUser(ownerId);
+    public List<ItemDto> getAllByUser(Long userId, Integer from, Integer size) {
+        userRepository.findById(userId)
+                .orElseThrow(() -> new NotFoundException("User not found"));
 
-        List<Item> items = itemRepository.findAllByOwner_Id(owner.getId());
-
-        LocalDateTime now = LocalDateTime.now();
+        Pageable pageable = PageRequest.of(from / size, size, Sort.by("id"));
+        List<Item> items = itemRepository.findByOwnerId(userId, pageable);
 
         return items.stream()
-                .map(item -> {
-                    Booking lastBooking = bookingRepository
-                            .findFirstByItem_IdAndEndBeforeOrderByEndDesc(item.getId(), now)
-                            .orElse(null);
-
-                    Booking nextBooking = bookingRepository
-                            .findFirstByItem_IdAndStartAfterOrderByStartAsc(item.getId(), now)
-                            .orElse(null);
-
-                    List<CommentDto> comments = commentRepository.findAllByItemId(item.getId()).stream()
-                            .map(CommentMapper::mapToCommentDto)
-                            .collect(Collectors.toList());
-
-                    return ItemMapper.toItemDtoWithBookings(item, lastBooking, nextBooking, comments);
-                })
+                .map(this::toItemDto)
+                .map(this::addBookingInfo)
                 .collect(Collectors.toList());
     }
 
     @Override
-    public List<ItemDto> search(String text) {
+    public List<ItemDto> search(String text, Integer from, Integer size) {
         if (text == null || text.isBlank()) {
-            return List.of();
+            return Collections.emptyList();
         }
-        List<Item> items = itemRepository.search(text.toLowerCase());
-        return items.stream()
-                .map(ItemMapper::toItemDto)
+
+        Pageable pageable = PageRequest.of(from / size, size);
+        return itemRepository.searchAvailableItems(text.toLowerCase(), pageable).stream()
+                .map(this::toItemDto)
                 .collect(Collectors.toList());
     }
 
     @Override
-    public CommentDto addComment(Long userId, CommentDto commentDto, Long itemId) {
-        User author = validateUser(userId);
-        Item item = validateItem(itemId);
+    @Transactional
+    public CommentDto addComment(Long itemId, CommentDto commentDto, Long userId) {
+        User author = userRepository.findById(userId)
+                .orElseThrow(() -> new NotFoundException("User not found"));
+        Item item = itemRepository.findById(itemId)
+                .orElseThrow(() -> new NotFoundException("Item not found"));
 
-        // Пользователь должен иметь завершённое бронирование этого предмета
-        LocalDateTime now = LocalDateTime.now();
-        boolean hasCompletedBooking = bookingRepository
-                .existsByItem_IdAndBooker_IdAndEndBefore(itemId, userId, now);
+        List<Booking> userBookings = bookingRepository
+                .findByBookerIdAndItemIdAndEndBeforeAndStatus(userId, itemId, LocalDateTime.now(), BookingStatus.APPROVED);
 
-        if (!hasCompletedBooking) {
-            throw new ValidationException("User has not completed a booking for this item");
+        if (userBookings.isEmpty()) {
+            throw new ValidationException("User didn't book this item");
         }
 
-        Comment comment = CommentMapper.toComment(commentDto, item, author);
-        Comment saved = commentRepository.save(comment);
+        Comment comment = Comment.builder()
+                .text(commentDto.getText())
+                .item(item)
+                .author(author)
+                .created(LocalDateTime.now())
+                .build();
 
-        return CommentMapper.mapToCommentDto(saved);
+        Comment savedComment = commentRepository.save(comment);
+        return toCommentDto(savedComment);
     }
 
-    private User validateUser(Long userId) {
-        return userRepository.findById(userId)
-                .orElseThrow(() -> new NotFoundException("User with id " + userId + " not found"));
+    private ItemDto toItemDto(Item item) {
+        return ItemDto.builder()
+                .id(item.getId())
+                .name(item.getName())
+                .description(item.getDescription())
+                .available(item.getAvailable())
+                .requestId(item.getRequestId())
+                .build();
     }
 
-    private Item validateItem(Long itemId) {
+    private ItemDto addBookingInfo(ItemDto itemDto) {
+        LocalDateTime now = LocalDateTime.now();
+
+        List<Booking> lastBookings = bookingRepository
+                .findLastBookingForItem(itemDto.getId(), now, BookingStatus.APPROVED);
+        if (!lastBookings.isEmpty()) {
+            itemDto.setLastBooking(toBookingInfo(lastBookings.get(0)));
+        }
+
+        List<Booking> nextBookings = bookingRepository
+                .findNextBookingForItem(itemDto.getId(), now, BookingStatus.APPROVED);
+        if (!nextBookings.isEmpty()) {
+            itemDto.setNextBooking(toBookingInfo(nextBookings.get(0)));
+        }
+
+        return itemDto;
+    }
+
+    private ItemDto.BookingInfo toBookingInfo(Booking booking) {
+        return new ItemDto.BookingInfo(booking.getId(), booking.getBooker().getId());
+    }
+
+    private List<CommentDto> getCommentsByItemId(Long itemId) {
+        return commentRepository.findByItemId(itemId).stream()
+                .map(this::toCommentDto)
+                .collect(Collectors.toList());
+    }
+
+    private CommentDto toCommentDto(Comment comment) {
+        return CommentDto.builder()
+                .id(comment.getId())
+                .text(comment.getText())
+                .authorName(comment.getAuthor().getName())
+                .created(comment.getCreated())
+                .build();
+    }
+
+    private Item getItemById(Long itemId) {
         return itemRepository.findById(itemId)
-                .orElseThrow(() -> new NotFoundException("Item with id " + itemId + " not found"));
+                .orElseThrow(() -> new NotFoundException("Item not found"));
     }
 }
